--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "gutenberg-latest-posts",
   "version": "1.0.0",
+  "private": true,
+  "author": "Justyna Ratajczak",
   "license": "GPL-3.0-or-later",
   "main": "src/index.js",
   "scripts": {
     "dev": "wp-scripts start",
-    "build": "wp scripts build"
+    "build": "wp-scripts build"
   },
   "devDependencies": {
     "@wordpress/scripts": "^7.1.2"
